--- a/WiU - B2/index.html
+++ b/WiU - B2/index.html
@@ -50,7 +50,7 @@
        <tbody>
           <tr class="odd">
              <td><a href="https://usabilityhub.com/do/e26aabd0a708/a7bb">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/tests/e26aabd0a708/results/d315de471016">Link to test results 1</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 2 here</a></td>
