--- a/WiU - B3/index.html
+++ b/WiU - B3/index.html
@@ -53,8 +53,8 @@
              <td><a href="https://usabilityhub.com/tests/e26aabd0a708/results/d315de471016">Link to test results 1</a></td>
           </tr>
           <tr>
-             <td><a href="https://usabilityhub.com/do/4b8690a41bca/5333">Link to test 2 here</a></td>
-             <td><a href="https://usabilityhub.com/tests/4b8690a41bca/results/c169427aae1c">Link to test results 2</a></td>
+             <td><a href="#">Link to test 2 here</a></td>
+             <td><a href="">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
              <td><a href="#">Link to test 3 here</a></td>
